# snowflake-cortex-agent-python

./: .gitignore  README.md  pyproject.toml
demos/external_notebooks/: AGENT_API_DEMO_EXTERNAL.ipynb
demos/snowflake_notebooks/: AGENT_API_DEMO_SNOWFLAKE.ipynb  environment.yml
demos/snowflake_streamlit/: functions.py  👤_Login.py
demos/snowflake_streamlit/pages/: 1_🔍_Agent Browser.py  2_💬_Agent Chat.py  3_🛠️_Agent Creation.py  4_🧾_Logs.py
src/cortex_agent/: __init__.py  agent.py  api_handler.py  callbacks.py  callbacks_extra.py  configuration.py  connection.py  environment_checks.py  exceptions.py  jwt_generator.py  message_formats.py  tool_resources.py  tools.py
